{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "InGame",
            "id": "efbf25df-eb57-4b89-a638-f08faa3c87e4",
            "actions": [
                {
                    "name": "Selection",
                    "type": "Button",
                    "id": "41b182b0-4e38-4a31-9f60-4652c45aed0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotatePiece",
                    "type": "Value",
                    "id": "a2ff521e-4189-4b87-920d-d39489e0c31a",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ec2d7f3-53d3-445b-b09f-2ccee67096d5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Selection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c56c9e3-17e2-4b8b-9385-cb45dfac7de4",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}